# alash-chatbot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  clean_db.py  diff.py  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3580c0dcd005_increase_api_key_length.py  59cfa0f1361d_rename_metadata_to_chunk_metadata.py  5be054bd6587_add_document_upload_id_to_processing_.py  a1b2c3d4e5f6_add_analysis_to_documents.py  b7c8d9e0f1a2_add_chunk_fields_for_page_retrieval.py  c1d2e3f4a5b6_restore_deleted_revision_placeholder.py  d4e5f6a7b8c9_add_app_settings_and_public_chat.py  e214adf7fb66_add_api_keys_table.py  e7f8a9b0c1d2_add_is_personal_to_knowledge_bases.py  f1a2b3c4d5e6_add_guest_token_to_chats.py  fd73eebc87c1_add_document_uploads_table.py  initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  minio.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  api_key.py  app_settings.py  base.py  chat.py  knowledge.py  user.py
backend/app/schemas/: __init__.py  api_key.py  app_settings.py  chat.py  knowledge.py  user.py
backend/app/services/: admin_bootstrap.py  api_key.py  app_settings.py  book_indexer.py  chat_service.py  (+4 more)
backend/scripts/: bootstrap_admin.py
backend/tests/: test_agent_prompt.py  test_agent_tools.py  test_book_indexer.py  test_chat_access.py  test_knowledge_base_export.py  test_user_schema.py  test_xlsx_processor.py
(+72 files in other folders)
